<resources>
    <string name="app_name">The-Fashion-Zone</string>
    <string name="login_in">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="do_you_have_an_account">Don\'t you have an account?</string>
    <string name="skipForNow">Skip</string>
    <string name="register">REGISTER</string>
    <string name="loginAction">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="telephone">Telephone</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gents">Gents</string>
    <string name="ladies">Ladies</string>
    <string name="kids">Kids</string>
    <string name="accessory">Accessories</string>
    <string name="click_here">Click Here</string>
    <string name="gonna_sell_something">Are you gonna sell something?</string>
    <string name="category">Categories</string>
    <string name="title_activity_home__screen">Home_Screen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_account">My Account</string>
    <string name="menu_shopping_cart">Shopping Cart</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_gents">gents</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>

<string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_dresses1">Dresses1</string>
    <string name="title_activity_skirts">Skirts</string>
    <string name="title_activity_tops">Tops</string>
    <string name="title_activity_shorts__pants">Shorts_Pants</string>
    <string name="title_activity_dress_view1">DressView1</string>
    <string name="title_activity_dress_view2">DressView2</string>
    <string name="title_activity_dress_view3">DressView3</string>
    <string name="title_activity_dress_view4">DressView4</string>
    <string name="title_activity_payment">Payment</string>
    <string name="title_activity_notification">Notification</string>
    <string name="title_activity_payment1">Payment1</string>
    <string name="title_activity_payment_2">Payment_2</string>

    <string name="seller_login">LOGIN AS A SELLER</string>
    <string name="seller_register">REGISTER AS A SELLER</string>
    <string name="agreement">By Registering for an Fashion Zone account you agree that you have read and accepted our Memebership Agreement</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>